style(dynamic-pages): fix status component on smaller screens

--- a/app/dashboard/[id]/_components/ItemStatus/styles.module.css
+++ b/app/dashboard/[id]/_components/ItemStatus/styles.module.css
@@ -1,13 +1,15 @@
 .formContainer {
   @apply flex 
+    flex-wrap
     flex-row 
     justify-center 
     items-center 
-    gap-2;
+    gap-2
+    p-2;
 }
 
 .selectContainer {
-  @apply flex-1 
+  @apply flex-[1_1_20rem]
     w-full 
     border-solid 
     border-[0.3rem] 
