--- a/app/dashboard/[id]/_components/RealtimeItem/styles.module.css
+++ b/app/dashboard/[id]/_components/RealtimeItem/styles.module.css
@@ -12,9 +12,14 @@
 .statusDetails {
   @apply flex 
     flex-row 
-    justify-center 
+    justify-end
     items-center 
     gap-4;
+}
+
+.highlightedText {
+  @apply text-primary
+    font-bold;
 }
 
 .commentsContainer {
